test/support/NodeVerifier.c
#include "NodeVerifier.h"
#include "Node.h"

void testAssertNodeEqual(Node *left, Node *right, int bf, Node *node){
  char *error;
  if(left != NULL){
    if(node->left == NULL){
      // error 
    }
  }
}
